--- a/html/main.html
+++ b/html/main.html
@@ -6,13 +6,14 @@
 		<link rel="stylesheet" type="text/css" href="style/style.css" />
 		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
 		<script type="text/javascript" src="style/scripts.js"></script>
+		<meta name="viewport" content="width=device-width" />
 	</head>
 	<body>
 		<div id="wrap">
 			<h1>Cafe au Lait</h1>
 			<div id="p_home" class="page">
 				<ul id="buttons">
-					<li><a href="#new_order" id="new_order">New Orders</a></li>
+					<li><a href="#new_order" id="new_order">New Order</a></li>
 					<li><a href="#">Current Orders</a></li>
 					<li><a href="#">History</a></li>
 					<li><a href="#">Settings</a></li>
